<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity3"
    android:background="@drawable/bg4"
    android:padding="15dp">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/grad1"
        android:fontFamily="cursive"
        android:gravity="center_horizontal"
        android:paddingTop="15dp"
        android:text="@string/biodata_mahasiwa"
        android:textColor="#9F5933"
        android:textSize="35sp"
        tools:layout_editor_absoluteX="15dp"
        tools:layout_editor_absoluteY="15dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="536dp"
        android:layout_marginEnd="116dp"
        android:layout_marginRight="116dp"
        android:fontFamily="monospace"
        android:onClick="activity6"
        android:text="@string/back_to_homepage"
        android:textColor="@color/black"
        android:theme="@style/buttonStyle1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="600dp"
        android:layout_marginEnd="116dp"
        android:layout_marginRight="116dp"
        android:fontFamily="monospace"
        android:onClick="activity7"
        android:text="@string/back_to_artikel"
        android:textColor="@color/black"
        android:theme="@style/buttonStyle1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fontFamily="monospace"
        android:gravity="bottom"
        android:text="@string/by_septi_intan_amalia"
        android:textColor="#682915"
        tools:layout_editor_absoluteX="13dp"
        tools:layout_editor_absoluteY="31dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="241dp"
        android:layout_height="22dp"
        android:layout_marginBottom="52dp"
        android:background="#2F2E5A"
        android:fontFamily="serif"
        android:gravity="center_horizontal"
        android:text="@string/sistem_informasi_2019"
        android:textColor="#DAE2F8"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="160dp"
        android:layout_height="255dp"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:src="@drawable/bg3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="TODO" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="156dp"
        android:orientation="vertical"
        android:padding="10dp"
        android:paddingStart="5dp"
        android:paddingLeft="5dp"
        android:paddingTop="60dp"
        android:paddingEnd="10dp"
        android:paddingRight="10dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:layout_editor_absoluteX="28dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#341F55"
            android:fontFamily="monospace"
            android:text="Nim :"
            android:textColor="#E9E38B" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#341F55"
            android:fontFamily="monospace"
            android:text="Nama :"
            android:textColor="#E9E38B" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#9284AC"
            android:fontFamily="monospace"
            android:text="Septi Intan Amalia"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#341F55"
            android:fontFamily="monospace"
            android:text="Tempat,Tanggal lahir:"
            android:textColor="#E9E38B" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#9284AC"
            android:fontFamily="monospace"
            android:text="Sinjai, 26 September 2001"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#341F55"
            android:fontFamily="monospace"
            android:text="Motto :"
            android:textColor="#E9E38B" />

        <TextView
            android:layout_width="183dp"
            android:layout_height="50dp"
            android:background="#9284AC"
            android:fontFamily="monospace"
            android:text="Don't wish for it, Work for it"
            android:textColor="@color/black" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>